fix spacing between color swatch and color name

--- a/sass/px-colors-design-demo.scss
+++ b/sass/px-colors-design-demo.scss
@@ -52,7 +52,6 @@ $inuit-enable-layout--huge : true;
 .colorName {
   width: 140px;
   text-align: left;
-  padding-left: 10px;
 }
 
 .swatch {
